# hugo-discussions-action

./: .gitignore  README.md  action.yml  coverage.xml  pyproject.toml
src/hugo_discussions_action/: main.py
