[tool.poetry]
name = "hugo-discussions-action"
version = "0.1.0"
description = "Create GitHub discussions for Hugo posts"
authors = ["Tamir Bahar"]
license = "MIT"
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
gql = {extras = ["all"], version = "^3.4.1"}
pydantic = "^1.10.7"
rich = "^13.3.5"
python-frontmatter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
isort = "^5.12.0"
nox = "^2022.11.21"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"


[tool.poetry.scripts]
hugo-discuss = 'hugo_discussions_action.main:app'

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
# Configure isort to work without access to site-packages
known_first_party = ["hugo_discussions_action", "tests"]

# Settings for Black compatibility
profile = "black"
line_length = 88


[tool.mypy]
check_untyped_defs = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "frontmatter",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
xfail_strict = true
addopts = "-ra -q --cov --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]


[tool.ruff]
# Avoid automatic removal of unused variables
unfixable = ['F841'] # unused-variable


[tool.coverage]
report.skip_covered = true